--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,9 @@
 
     <string name="pref_sort_by_key" translatable="false">sort_by</string>
 
-
+    <string name="action_share">Share</string>
     <string name="content_authority">com.example.android.popularmovies</string>
 
-
+    <string name="movie_trailers_title">Movie trailers</string>
 
 </resources>
